--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com.css?family=Poppins:300,400,500,600,700,800");
+/* @import url("https://fonts.googleapis.com.css?family=Poppins:300,400,500,600,700,800"); */
 
 * {
   margin: 0;
