--- a/src/styles/DisplayTable.css
+++ b/src/styles/DisplayTable.css
@@ -10,6 +10,9 @@ table {
   margin-right: 1rem;
   margin-left: 1rem;
   color: #333333;
+  position: sticky;
+  top: -1px;
+  background: white;
   /* border-bottom: 2px solid black; */
 }
 
@@ -18,7 +21,7 @@ table {
   font-family: inherit;
   width: 100%;
   border: 0;
-  border-radius: 1.5rem;
+  /* border-radius: 1.5rem; */
   font-family: inherit;
   font-weight: 700;
   font-size: inherit;
@@ -27,7 +30,6 @@ table {
   margin-bottom: 1px;
   background-color: #333333;
   color: #fff;
-
   transition: all .4s;
 }
 
@@ -83,7 +85,11 @@ table {
   margin: 1.5rem 1rem;
   background-color: #3e3e3f;
   padding: 1rem 3rem;
-  color: #fff
+  color: #fff;
+  position: sticky;
+  top: 54px;
+  /* background: white; */
+
 }
 
 .district-td {
